added example of Testing Order Service domain logic